# elf-engine-utils

./: README.md  pyproject.toml
.github/workflows/: build.yml
elf/: comp_gen.py  comp_templates.py  main.py
